--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    text-transform: capitalize;
+    /* text-transform: capitalize; */
     text-decoration: none;
     outline: none;
     border: none;
