--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ section {
 
 .heading p a {
     padding-right: 0.5rem;
-    color: #fa1d86;
+    color: #eac143;
 }
 
 .heading p a:hover {
@@ -94,7 +94,7 @@ section {
 }
 
 .header .logo i {
-    color: #fa1d86;
+    color: #eac143;
 }
 
 .header .navbar ul {
@@ -118,7 +118,7 @@ section {
 }
 
 .header .navbar ul li a:hover {
-    background: #fa1d86;
+    background: #eac143;
 }
 
 .header .navbar ul li ul {
@@ -244,7 +244,7 @@ section {
 }
 
 .about .content p {
-    font-size: 1.4rem;
+    font-size: 2.1rem;
     padding: 1rem 0;
     color: #666;
     line-height: 2.5;
@@ -308,7 +308,7 @@ section {
 
 .course-2 .box .content span {
     font-size: 1.4rem;
-    color: #fa1d86;
+    color: #eac143;
     background: #ffeaf4;
     padding: 0.5rem 1rem;
 }
@@ -348,12 +348,12 @@ section {
 }
 
 .course-2 .box .content .icons a:hover {
-    color: #fa1d86;
+    color: #eac143;
 }
 
 .course-2 .box .content .icons a i {
     padding-right: 0.5rem;
-    color: #fa1d86;
+    color: #eac143;
 }
 
 .course-3 {
@@ -463,25 +463,25 @@ section {
     border-radius: 0.5rem;
 }
 
-.teachers {
+.team {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: (minmax(27rem, 1fr)) [auto-fit];
     grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
-    gap: 1.5rem;
+    gap: 4rem;
 }
 
-.teachers .box {
+.team .box {
     text-align: center;
     overflow: hidden;
 }
 
-.teachers .box:hover .image .share {
+.team .box:hover .image .share {
     -webkit-transform: translateY(0);
     transform: translateY(0);
 }
 
-.teachers .box:hover .image .share a {
+.team .box:hover .image .share a {
     -webkit-transform: translateY(-1rem);
     transform: translateY(-1rem);
     opacity: 1;
@@ -491,15 +491,15 @@ section {
     transition: transform 0.2s 0.2s, -webkit-transform 0.2s 0.2s;
 }
 
-.teachers .box .image {
+.team .box .image {
     overflow: hidden;
-    height: 32rem;
-    width: 100%;
+    height: 25rem;
+    width: 80%;
     position: relative;
-    border-radius: 1rem;
+    border-radius: 5rem;
 }
 
-.teachers .box .image .share {
+.team .box .image .share {
     position: absolute;
     top: 0;
     left: 0;
@@ -521,7 +521,7 @@ section {
     transform: translateY(-100%);
 }
 
-.teachers .box .image .share a {
+.team .box .image .share a {
     font-size: 2.5rem;
     margin: 2rem 1.5rem;
     color: #fff;
@@ -530,97 +530,110 @@ section {
     opacity: 0;
 }
 
-.teachers .box .image .share a:hover {
-    color: #fa1d86;
+.team .box .image .share a:hover {
+    color: #eac143;
 }
 
-.teachers .box .image img {
+.team .box .image img {
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
     object-fit: cover;
 }
 
-.teachers .box .content {
-    padding-top: 1rem;
+.team .box .content {
+    padding-top: rem;
+    padding-right: 4rem;
 }
 
-.teachers .box .content h3 {
+.team .box .content h3 {
     font-size: 2rem;
     color: #302851;
 }
 
-.teachers .box .content span {
+.team .box .content span {
     color: #666;
     font-size: 1.5rem;
 }
-
-.blog {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: (minmax(31rem, 1fr)) [auto-fit];
-    grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
-    gap: 1.5rem;
+/* */
+.team .box:hover .imageTeam .share {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
 
-.blog .box .image {
-    height: 25rem;
-    width: 100%;
+.team .box:hover .imageTeam .share a {
+    -webkit-transform: translateY(-1rem);
+    transform: translateY(-1rem);
+    opacity: 1;
+    -webkit-transition: -webkit-transform 0.2s 0.2s;
+    transition: -webkit-transform 0.2s 0.2s;
+    transition: transform 0.2s 0.2s;
+    transition: transform 0.2s 0.2s, -webkit-transform 0.2s 0.2s;
+}
+
+.team .box .imageTeam {
     overflow: hidden;
+    height: 25rem;
+    width: 60%;
+    position: relative;
+    border-radius: 5rem;
 }
 
-.blog .box .image img {
+.team .box .imageTeam .share {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    z-index: 10;
+    overflow: hidden;
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+}
+
+.team .box .imageTeam .share a {
+    font-size: 2.5rem;
+    margin: 2rem 1.5rem;
+    color: #fff;
+    -webkit-transform: translateY(5rem);
+    transform: translateY(5rem);
+    opacity: 0;
+}
+
+.team .box .imageTeam .share a:hover {
+    color: #eac143;
+}
+
+.team .box .imageTeam img {
     height: 100%;
     width: 100%;
     -o-object-fit: cover;
     object-fit: cover;
-    border-radius: 0.5rem;
 }
 
-.blog .box .content {
-    padding: 2rem;
-    background: #f5f5f5;
+.team .box .contentTeam {
+    padding-top: 2rem;
+    padding-right: 14rem;
 }
 
-.blog .box .content .icons {
-    padding: 1.5rem 0;
-    margin-bottom: 1rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-}
-
-.blog .box .content .icons a {
-    font-size: 1.4rem;
-    color: #666;
-}
-
-.blog .box .content .icons a:hover {
-    color: #183765;
-}
-
-.blog .box .content .icons a i {
-    padding-right: 0.5rem;
-    color: #183765;
-}
-
-.blog .box .content h3 {
-    font-size: 1.7rem;
-    padding: 0.5rem 0;
+.team .box .contentTeam h3 {
+    font-size: 2rem;
     color: #302851;
 }
 
-.blog .box .content p {
-    padding: 1rem 0;
-    font-size: 1.4rem;
-    line-height: 2.5;
+.team .box .contentTeam span {
     color: #666;
+    font-size: 1.5rem;
 }
 
 .contact .icons-container {
@@ -738,7 +751,7 @@ section {
 }
 
 .footer .box-container .box a:hover {
-    color: #fa1d86;
+    color: #eac143;
 }
 
 .footer .box-container .box a:hover i {
@@ -746,7 +759,7 @@ section {
 }
 
 .footer .box-container .box a i {
-    color: #fa1d86;
+    color: #eac143;
     padding-right: 0.5rem;
 }
 
@@ -761,7 +774,7 @@ section {
 }
 
 .footer .credit span {
-    color: #fa1d86;
+    color: #eac143;
 }
 
 /* GIF Loader */
