--- a/dashboard/css/vertical-layout-light/style.css
+++ b/dashboard/css/vertical-layout-light/style.css
@@ -22771,7 +22771,7 @@ code {
 }
 
 .card.table-darkBGImg {
-  background: #1E283D url("../../images/dashboard/darkBG.png") repeat-y right top;
+  background: #1E283D url("../../../images/logo.png") repeat-y right top;
 }
 
 .card.tale-bg {
