--- a/buat baru/assets/css/style.css
+++ b/buat baru/assets/css/style.css
@@ -24,7 +24,7 @@ body {
 
 .container {
   position: relative;
-  width: 100vh;
+  width: 100%;
 }
 
 /* =============== Navigation ================ */
