--- a/css/style2.css
+++ b/css/style2.css
@@ -9,12 +9,29 @@
     box-sizing: border-box;
 }
 
+/*
+Colours Hex Codes/Themes
+#183765 - Blue
+#192e59 - Dark Blue
+#f9dc5e - Yellow
+#eac143 - Dark Yellow
+#ed2146 - Red
+#8e1733 - Dark Red
+#ffffff - White
+#000000 - Black
+*/
 :root {
-    --blue: #2a2185;
+    --blue: #192e59;
     --white: #fff;
     --gray: #f5f5f5;
     --black1: #222;
     --black2: #999;
+    --blue2: #183765;
+    --darkblue: #192e59;
+    --yellow: #f9dc5e;
+    --darkyellow: #eac143;
+    --red: #ed2146;
+    --darkred: #8e1733;
 }
 
 body {
@@ -27,6 +44,25 @@ body {
     width: 100%;
 }
 
+/* unvisited link */
+a:link {
+    color: var(--black2);
+}
+
+/* visited link */
+a:visited {
+    color: var(--black2);
+}
+
+/* mouse over link */
+a:hover {
+    color: var(--darkblue);
+}
+
+/* selected link */
+a:active {
+    color: var(--darkblue);
+}
 /* =============== Navigation ================ */
 .navigation {
     position: fixed;
@@ -62,7 +98,7 @@ body {
 }
 
 .navigation ul li:nth-child(1) {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
     pointer-events: none;
 }
 
@@ -78,7 +114,12 @@ body {
 .navigation ul li.hovered a {
     color: var(--blue);
 }
-
+.navigation ul li a .icon #logoLUS {
+    height: 120px;
+    margin-top: 10px;
+    margin-left: 80px;
+    display: block;
+}
 .navigation ul li a .icon {
     position: relative;
     display: block;
@@ -201,15 +242,6 @@ body {
     cursor: pointer;
 }
 
-.user img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
 /* ======================= Cards ====================== */
 .cardBox {
     position: relative;
@@ -249,12 +281,18 @@ body {
     color: var(--black2);
 }
 
+.cardBox .card .icon2 {
+    font-size: 1.5rem;
+    color: var(--black2);
+}
+
 .cardBox .card:hover {
-    background: var(--blue);
+    background: var(--darkyellow);
 }
 .cardBox .card:hover .numbers,
 .cardBox .card:hover .cardName,
-.cardBox .card:hover .iconBx {
+.cardBox .card:hover .iconBx,
+.cardBox .card:hover .icon2 {
     color: var(--white);
 }
 
