Update icon animations!

--- a/css/style2.css
+++ b/css/style2.css
@@ -47,21 +47,25 @@ body {
 /* unvisited link */
 a:link {
     color: var(--black2);
+    text-decoration: none;
 }
 
 /* visited link */
 a:visited {
     color: var(--black2);
+    text-decoration: none;
 }
 
 /* mouse over link */
 a:hover {
     color: var(--darkblue);
+    text-decoration: none;
 }
 
 /* selected link */
 a:active {
     color: var(--darkblue);
+    text-decoration: none;
 }
 /* =============== Navigation ================ */
 .navigation {
@@ -116,7 +120,7 @@ a:active {
 }
 .navigation ul li a .icon #logoLUS {
     height: 120px;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 80px;
     display: block;
 }
