--- a/css/style2.css
+++ b/css/style2.css
@@ -302,6 +302,29 @@ a:active {
 }
 
 /* ================== Order Details List ============== */
+.btn {
+    align-items: center;
+    justify-content: center;
+    height: 45px;
+    max-width: 150px;
+    width: 100%;
+    border: none;
+    outline: none;
+    color: var(--white);
+    border-radius: 5px;
+    margin: 10px 0;
+    background-color: #183765;
+    transition: all 0.3s linear;
+    cursor: pointer;
+}
+.btn .btnText {
+    font-size: 15px;
+    font-weight: 500;
+}
+form .btn:hover {
+    background-color: var(--red);
+}
+
 .details {
     position: relative;
     width: 100%;
@@ -327,31 +350,6 @@ a:active {
     align-items: flex-start;
 }
 
-.detailsReg {
-    position: relative;
-    width: 100%;
-    padding: 20px;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 30px;
-    /* margin-top: 10px; */
-}
-
-.detailsReg .recentOrders {
-    position: relative;
-    display: grid;
-    min-height: 600px;
-    background: var(--white);
-    padding: 20px;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    border-radius: 20px;
-}
-
-.detailsReg .cardHeader {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
 .cardHeader h2 {
     font-weight: 600;
     color: var(--blue);
@@ -365,8 +363,9 @@ a:active {
     border-radius: 6px;
 }
 
-.details table {
-    width: 100%;
+.details,
+table {
+    /*width: 100%;*/
     border-collapse: collapse;
     margin-top: 10px;
 }
@@ -438,6 +437,7 @@ a:active {
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
 }
+/*
 .recentCustomers .imgBx {
     position: relative;
     width: 40px;
@@ -453,6 +453,7 @@ a:active {
     height: 100%;
     object-fit: cover;
 }
+*/
 .recentCustomers table tr td {
     padding: 12px 10px;
 }
