--- a/css/style2.css
+++ b/css/style2.css
@@ -67,6 +67,19 @@ a:active {
     color: var(--darkblue);
     text-decoration: none;
 }
+/* Class Anchor */
+.b:visited {
+    color: var(--darkyellow);
+    text-decoration: none;
+}
+.b:visited {
+    color: var(--darkyellow);
+    text-decoration: none;
+}
+.b:hover {
+    color: var(--white);
+    text-decoration: none;
+}
 /* =============== Navigation ================ */
 .navigation {
     position: fixed;
