--- a/css/style.css
+++ b/css/style.css
@@ -735,7 +735,10 @@ section {
 }
 
 .footer {
+    text-align: center;
     background: #f5f5f5;
+    min-height: 360px;
+    height: 100%;
 }
 
 .footer .box-container {
@@ -752,26 +755,6 @@ section {
     color: #302851;
 }
 
-.footer .box-container .box a {
-    display: block;
-    font-size: 1.4rem;
-    padding: 1rem 0;
-    color: #666;
-}
-
-.footer .box-container .box a:hover {
-    color: #eac143;
-}
-
-.footer .box-container .box a:hover i {
-    padding-right: 2rem;
-}
-
-.footer .box-container .box a i {
-    color: #eac143;
-    padding-right: 0.5rem;
-}
-
 .footer .credit {
     text-align: center;
     margin-top: 2rem;
@@ -784,6 +767,73 @@ section {
 
 .footer .credit span {
     color: #eac143;
+}
+
+.footer .box-container .box ul {
+    position: relative;
+    top: 40%;
+    left: 87%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.footer .box-container .box ul li {
+    list-style: none;
+}
+
+.footer .box-container .box ul li a {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    display: block;
+    text-align: center;
+    margin: 0 10px;
+    border-radius: 50%;
+    padding: 6px;
+    box-sizing: border-box;
+    text-decoration: none;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
+    background: linear-gradient(0deg, #ddd, #fff);
+    transition: 0.5s;
+}
+
+.footer .box-container .box ul li a:hover {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    text-decoration: none;
+}
+
+.footer .box-container .box ul li a .fab {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background: linear-gradient(0deg, #fff, #ddd);
+    border-radius: 50%;
+    line-height: calc(60px - 12px);
+    font-size: 24px;
+    color: #262626;
+    transition: 0.5s;
+}
+
+.footer .box-container .box ul li:nth-child(1) a:hover .fab {
+    color: #3b5998;
+}
+
+.footer .box-container .box ul li:nth-child(2) a:hover .fab {
+    color: #00aced;
+}
+
+.footer .box-container .box ul li:nth-child(3) a:hover .fab {
+    color: #dd4b39;
+}
+
+.footer .box-container .box ul li:nth-child(4) a:hover .fab {
+    color: #007bb6;
+}
+
+.footer .box-container .box ul li:nth-child(5) a:hover .fab {
+    color: #e4405f;
 }
 
 /* GIF Loader */
