--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,19 @@
     transition: all 0.2s linear;
 }
 
+:root {
+    --white: #fff;
+    --gray: #f5f5f5;
+    --black1: #222;
+    --black2: #999;
+    --blue: #183765;
+    --darkblue: #192e59;
+    --yellow: #f9dc5e;
+    --darkyellow: #eac143;
+    --red: #ed2146;
+    --darkred: #8e1733;
+}
+
 html {
     font-size: 62.5%;
     overflow-x: hidden;
@@ -1037,7 +1050,29 @@ form .buttons button {
     font-size: 15px;
     color: #333;
 }
+/* unvisited link */
+.text a:link {
+    color: var(--darkyellow);
+    text-decoration: none;
+}
 
+/* visited link */
+.text a:visited {
+    color: var(--darkyellow);
+    text-decoration: none;
+}
+
+/* mouse over link */
+.text a:hover {
+    color: var(--red);
+    text-decoration: underline;
+}
+
+/* selected link */
+.text a:active {
+    color: var(--red);
+    text-decoration: none;
+}
 /* Responsive Design */
 @media (max-width: 450px) {
     html {
