--- a/css/style2.css
+++ b/css/style2.css
@@ -24,7 +24,7 @@ Colours Hex Codes/Themes
     --white: #fff;
     --gray: #f5f5f5;
     --black1: #222;
-    --black2: #999;
+    --gray: #d4d4d4;
     --blue: #183765;
     --darkblue: #192e59;
     --yellow: #f9dc5e;
